fixed up scroll bug on mobile view

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body, html {
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    position: relative;
+    overflow-x: hidden!important;
 }
 
 #panorama {
@@ -37,7 +38,6 @@ body, html {
 
 #background {
     transition: all .5s ease-in-out;
-    background-image: url(./bruce-background.jpg);
     height: 100%;
     width: 100%;
     z-index: 999;
@@ -155,8 +155,11 @@ body, html {
         width: 100%;
         height: 100%;
         position: absolute; 
-        overflow: auto;
         z-index: 999;
+
+        display: block;
+        overflow-y: auto;
+        overflow-x: hidden;
         background-color: rgb(0, 35, 102);
     }
 
